--- a/abc/jenkinsfile
+++ b/abc/jenkinsfile
@@ -18,3 +18,11 @@ pipeline
             }
                 
         }
+        stage('ContinuousDeployment')
+        {
+            steps
+            {
+                sh label: '', script: 'scp /home/ubuntu/.jenkins/workspace/DeclarativePipeline/webapp/target/webapp.war ubuntu@172.31.31.15:/var/lib/tomcat8/webapps/testwebapp.war'
+            }
+            
+        }
